--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -9,6 +9,7 @@
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/11/n11785361.md#1">蔡英文连任 韩国瑜败选 中共官媒报异调</a><br>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/8/n11777903.md#1">骆惠宁称揪心 郭文贵：骆绝对心狠手辣</a><br>
 <br><p><a href="https://github.com/zdqyi2905/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
+<a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/15/n11794198.md#1">文武：国民党的前途与命运</a><br>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/15/n11793807.md#1">方能达：祝贺《大纪元时报》读者日增</a><br>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11793721.md#1">夏林：美丽与坚韧</a><br>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11793432.md#1">周晓辉：班农证川普弃绥靖政策 中共去日无多</a><br>
@@ -21,7 +22,6 @@
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11791165.md#1">周晓辉：刘鹤赴美签协议 习近平为何突访缅甸？</a><br>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11791129.md#1">洪达：从国际笑话看中共造假</a><br>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11791133.md#1">颜丹：台湾大选结束 中共气急败坏为哪般？</a><br>
-<a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11791025.md#1">王友群：蔡英文胜选获国际赞赏的五个原因</a><br>
 <br><p><a href="https://github.com/zdqyi2905/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/6/n11772884.md#1">【直播回放】蔡英文高票连任 名家点评胜选关键</a><br>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/10/n11782674.md#1">美对伊朗祭新制裁 中国企业上榜被冻结资产</a><br>
@@ -93,7 +93,7 @@
 <tr><td VALIGN=TOP width="355"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/zdqyi2905/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="352"><h2><p><strong>三退大潮</strong></p></h2><strong>退出中共党、团、队总人数:
 
 ```diff
-- 共 349,855,544 人
+- 共 349,858,651 人
 ```
 </strong>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/30/n11754554.md#1">新元赋——退党中心2020新年寄语</a><br>
