--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -4,10 +4,10 @@
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/11/n11783658.md#1">【更新】蔡英文破817万票 民进党立委过半</a><br>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/6/n11772884.md#1">【直播回放】蔡英文高票连任 名家点评胜选关键</a><br>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/12/n11788275.md#1">114个“耳光”搧向国台办 李敖儿子微博被封</a><br>
-<a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/8/n11776083.md#1">中共央视前主持人芮成钢近况被曝光</a><br>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/10/n11783300.md#1">美杀伊朗将军震慑中南海 传习招7常委紧急开会</a><br>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/11/n11785361.md#1">蔡英文连任 韩国瑜败选 中共官媒报异调</a><br>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/8/n11777903.md#1">骆惠宁称揪心 郭文贵：骆绝对心狠手辣</a><br>
+<a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/12/n11786676.md#1">所属党立委选举失利 陈水扁：从此退出政坛</a><br>
 <br><p><a href="https://github.com/zdqyi2905/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/15/n11794198.md#1">文武：国民党的前途与命运</a><br>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/15/n11793807.md#1">方能达：祝贺《大纪元时报》读者日增</a><br>
