--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -9,6 +9,7 @@
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/8/n11777903.md#1">骆惠宁称揪心 郭文贵：骆绝对心狠手辣</a><br>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/12/n11786676.md#1">所属党立委选举失利 陈水扁：从此退出政坛</a><br>
 <br><p><a href="https://github.com/zdqyi2905/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
+<a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/15/n11794615.md#1">陈思敏：中美签署第一阶段贸协 中共2点惨败</a><br>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/15/n11794324.md#1">【名家专栏】教师须慎重处理有争议的问题</a><br>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/15/n11794198.md#1">文武：国民党的前途与命运</a><br>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/15/n11793807.md#1">方能达：祝贺《大纪元时报》读者日增</a><br>
@@ -21,7 +22,6 @@
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11791261.md#1">袁斌：向往自由的大陆人为何为台湾大选干杯</a><br>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11791474.md#1">何清涟：2020台湾大选——救亡压倒一切</a><br>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11791165.md#1">周晓辉：刘鹤赴美签协议 习近平为何突访缅甸？</a><br>
-<a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11791129.md#1">洪达：从国际笑话看中共造假</a><br>
 <br><p><a href="https://github.com/zdqyi2905/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/6/n11772884.md#1">【直播回放】蔡英文高票连任 名家点评胜选关键</a><br>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/10/n11782674.md#1">美对伊朗祭新制裁 中国企业上榜被冻结资产</a><br>
